--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,18 @@ nav li {
 #head * {
 	color: #fff;
 }
+#team {
+	background-color: #06a2cb;
+}
+#team * {
+	color: #fff;
+}
+#contact {
+	background-color: #192823;
+}
+#contact * {
+	color: #fff;
+}
 #about {
 	background-color: #ebb035;
 }
@@ -23,6 +35,12 @@ nav li {
 	background-color: rgba(0,0,0,0.1);
 	padding: 20px;
 	margin-top: 0;
+}
+.tertiary {
+	opacity: 0.3;
+}
+.map{
+	max-height: 200px;
 }
 .bmargin {
 	margin-bottom: 80px;
@@ -65,4 +83,47 @@ nav li {
 	margin:auto;
 	bottom: -20px;
 	
+}
+.circle {
+	border-radius: 1000px;
+	border: 12px solid #02708d;
+	width: 100%;
+}
+.inline {
+	display: inline-block;
+}
+p {
+	font-size: 90%;
+	line-height: 1.5em;
+}
+.hoverup {
+	opacity: 0.7;
+	position: relative;
+}
+.hoverup:hover{
+	top: -4px;
+	opacity: 0.9;
+}
+.trans {
+	-webkit-transition: all 0.3s cubic-bezier(0,.91,.43,.98);
+	-moz-transition: all 0.3s cubic-bezier(0,.91,.43,.98);
+	-ms-transition: all 0.3s cubic-bezier(0,.91,.43,.98);
+	-o-transition: all 0.3s cubic-bezier(0,.91,.43,.98);
+	transition: all 0.3s cubic-bezier(0,.91,.43,.98);
+}
+input, textarea {
+	line-height: 50px;
+	min-height: 50px !important;
+	border-radius: 7px;
+	padding: 15px !important;
+	background-color: #131313 !important;
+	border: none !important;
+	outline: none !important;
+	box-shadow: none !important;
+}
+input:focus, textarea:focus {
+	background-color: #0f0f0f !important;
+}
+textarea {
+	min-height: 200px !important;
 }
